--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+KEY_PATH=D\:/ZDX.jks
+KEY_PASS=0chinese0...
+ALIAS_NAME=NEU
+ALIAS_PASS=0chinese0...
