--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,6 @@ android {
             storePassword KEY_PASS
           keyAlias ALIAS_NAME
             keyPassword ALIAS_PASS
-
-
-
         }
     }
 
@@ -61,5 +58,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
 
 }
